# board-games-ai

./: README.md  pyproject.toml
lines_and_boxes/: __main__.py
peg_solitaire/: __main__.py  app.py  astar.py  board.py  heuristics.py
peg_solitaire/experiments/: bench.py  plots.ipynb  results.csv
peg_solitaire/experiments/.ipynb_checkpoints/: plots-checkpoint.ipynb
peg_solitaire/tests/: test_board.py
src/Timbiriche/: __main__.py  board.py  metrics.py  minmax.py
